Add gtklock and cliphist configs

--- a/.config/gtklock/style.css
+++ b/.config/gtklock/style.css
@@ -1,5 +1,5 @@
 window {
-    background-image: url("../niri/wallpaper-blur.jpg");
+    background-image: url("/home/ziad/Pictures/Luka_46_trained_art.png");
     background-repeat: no-repeat;
     background-size: cover;
     /* background-position: ; */
